--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-simple-chatbot": "^0.6.1",
+    "react-simple-star-rating": "^5.1.7",
+    "styled-components": "^6.1.8",
+    "translate": "^2.0.2",
     "twilio": "^5.0.0-rc.1"
   },
   "devDependencies": {
