--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "firebase": "^10.7.1",
     "next": "^14.0.4",
     "react": "^18",
+    "react-auth-kit": "^3.0.2-alpha.14",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "react-simple-chatbot": "^0.6.1",
     "react-simple-star-rating": "^5.1.7",
-    "styled-components": "^6.1.8",
     "translate": "^2.0.2",
     "twilio": "^5.0.0-rc.1"
   },
