Added shadcn and made  tabs

--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.0.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
+    "lucide-react": "^0.309.0",
     "next": "^14.0.4",
     "react": "^18",
     "react-auth-kit": "^3.0.2-alpha.14",
@@ -19,6 +23,8 @@
     "react-router-dom": "^6.21.1",
     "react-simple-chatbot": "^0.6.1",
     "react-simple-star-rating": "^5.1.7",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "translate": "^2.0.2",
     "twilio": "^5.0.0-rc.1"
   },
