Finally done with chatbot working properly

--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "react": "^18",
     "react-auth-kit": "^3.0.2-alpha.14",
     "react-dom": "^18",
+    "react-flatpickr": "^3.10.13",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "react-simple-chatbot": "^0.6.1",
     "react-simple-star-rating": "^5.1.7",
+    "styled-components": "^4.4.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "translate": "^2.0.2",
-    "twilio": "^5.0.0-rc.1"
+    "twilio": "^5.0.0-rc.1",
+    "web-vitals": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
