--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
+    "i18next": "^23.7.16",
     "lucide-react": "^0.309.0",
     "next": "^14.0.4",
+    "next-i18next": "^15.2.0",
     "react": "^18",
     "react-auth-kit": "^3.0.2-alpha.14",
     "react-dom": "^18",
     "react-flatpickr": "^3.10.13",
+    "react-i18next": "^14.0.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
